<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_time"
        app:layout_constraintBottom_toTopOf="@+id/tv_time_start"
        app:layout_constraintStart_toStartOf="@+id/tv_time_start" />

    <TextView
        android:id="@+id/tv_time_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/time_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="59dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_coach"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/coach"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time_finish"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/tv_place_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:src="@drawable/ic_baseline_place_24"
        app:layout_constraintEnd_toStartOf="@+id/tv_place"
        app:layout_constraintTop_toBottomOf="@+id/tv_class_time" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="27dp"
        android:text="@string/place"
        app:layout_constraintBottom_toBottomOf="@+id/tv_coach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_place_icon" />

    <TextView
        android:id="@+id/tv_class_time"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="29dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@+id/tv_type_of_workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_type_of_workout" />

    <TextView
        android:id="@+id/tv_type_of_workout"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="16dp"
        android:text="@string/type_of_workout"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/tv_class_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_time_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="59dp"
        android:text="@string/time_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>